# cmake-in-action

./: .gitignore  README.md
src/ch001/makefile/: Makefile  main
src/ch001/动态库/: a.c
src/ch001/头文件库/: main
src/ch001/无须传递/: main
src/ch001/无须传递/liba/: a.cpp
src/ch001/无须传递/libb/: b.cpp
src/ch001/静态库/: Makefile  libab.dylib  main.c
src/ch002/: 您好Cmake.cmake
src/ch003/: 命令调用.cmake
src/ch003/列表/: print_list.cmake  定义列表.cmake
src/ch003/变量/环境变量/: main.cmake  setenv.cmake
src/ch003/变量/缓存变量/: CMakeLists.txt
src/ch003/命令参数/: 变量引用.cmake  引号参数.cmake  非引号参数.cmake  预定义变量.cmake
src/ch003/命令定义/: 函数定义.cmake  列表或索引访问参数.cmake
src/ch003/条件语句/: 单参数条件.cmake  变量或字符串.cmake  奇怪的变量.cmake
src/ch005/: 快速排序.cmake
src/ch006/mylib/: CMakeLists.txt
src/ch006/mylib/build_debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/ch007/一般库/: CMakeLists.txt
src/ch007/全局属性/: CMakeLists.txt
src/ch007/可执行文件/: CMakeLists.txt  main.c
src/ch007/可执行文件导入目标/: CMakeLists.txt
src/ch007/库导入目标/: CMakeLists.txt
src/ch007/接口库/: CMakeLists.txt  main.c
src/ch007/目录属性/: CMakeLists.txt  main.c
src/ch007/目标属性/: CMakeLists.txt  main.c
src/ch007/目标属性/liba/: CMakeLists.txt
src/ch007/目标属性/liba/include/: liba.h
src/ch007/目标属性/liba/src/: liba.c
src/ch1/hello-world/: a.out
src/ch1/makefile/: main.cpp  slow.cpp
src/ch1/动态库/: main.c
src/ch1/头文件库/: Makefile  main.cpp
src/ch1/无须传递/: Makefile  main.cpp
src/ch1/漫长等待/: a.out
src/ch1/链接Boost/: Makefile  main.cpp  shared_boost  static_boost
src/ch1/静态库/: a.c  b.c  main
(+11 files in other folders)
